--- a/index.html
+++ b/index.html
@@ -4,13 +4,13 @@
 <head>
 
   <link rel="stylesheet" href="./estilos.css">
-  <title>Document</title>
+  <title>Seres Mitológicos</title>
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
     integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
 
 </head>
 
-<body style="background-color:chartreuse;">
+<body style="background-color:rgb(176, 211, 142);">
   <header>
     <nav class="navbar navbar-expand-lg bg-body-tertiary">
       <div class="container-fluid">
@@ -23,13 +23,13 @@
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
           <ul class="navbar-nav me-auto mb-2 mb-lg-0">
             <li class="nav-item">
-              <a class="nav-link active" aria-current="page" href="#">SERES ACUÁTICOS</a>
+              <a class="selected text-decoration-none" aria-current="page" href="#acuaticos">SERES ACUÁTICOS</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link active" aria-current="page" href="#">SERES TERRESTRES</a>
+              <a class="selected text-decoration-none" aria-current="page" href="#terrestres">SERES TERRESTRES</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link active" aria-current="page" href="#">SERES VOLADORES</a>
+              <a class="selected text-decoration-none" aria-current="page" href="#voladores">SERES VOLADORES</a>
             </li>
           </ul>
         </div>
@@ -59,18 +59,19 @@
     </button>
   </div>
 
-  <div style="background-color: blueviolet;" class="intro">
-    <p>Los seres mitologicos son criaturas imaginarias, ficticias, mitologica o legendaria son denominaciones que se les
+  <div class="intro">
+    <h4>Los seres mitologicos son criaturas imaginarias, ficticias, mitologica o legendaria son denominaciones que se les
       dan a los distintos seres presentes en la mitologia o leyendas de distintas civilizaciones, muchas se perciben
       como mounstruos inconcebibles por viajeros de otras culturas y la mayoría son una combinación de dos o más
       animales o con el ser humano. Dentro de la historia los seres se encontraban en distintos entornos como el cielo,
-      el agua y la tierra y aquí te presentamos algunos de los seres más emblematicos.</p>
+      el agua y la tierra y aquí te presentamos algunos de los seres más emblematicos.</h4>
   </div>
 
   <div class="contenedor intro">
+    <div id="acuaticos">
     <div class="row text-center">
-
-      <h2>SERES ACUÁTICOS</h2>
+    
+      <h2 class="caja1">SERES ACUÁTICOS</h2>
 
       <div class="caja1 col-md-3">
         <h2>Cecaelia</h2>
@@ -109,16 +110,19 @@
           escamas verdes, plateadas o pardas. Su alimentación se basa en algas, plancton y peces pequeños. Para respirar
           bajo el mar usan las escamas de su parte de pez, que les permiten estar varios días bajo el agua sin necesidad
           de salir a la superficie.</p>
+      </div>
 
+      </div>
       </div>
     </div>
 
 
 
     <div class="contenedor">
+      <div id="terrestres">
       <div class="row text-center">
 
-        <h2>SERES TERRESTRES</h2>
+        <h2 class="caja2">SERES TERRESTRES</h2>
 
         <div class="caja2 col-md-3">
           <h2>Centauro</h2>
@@ -160,14 +164,15 @@
             propio lenguaje musical y cualquier animal que esté cerca de una ninfa se acercará para ser acariciado por
             ella, sin importarle tener cerca incluso a su peor enemigo.</p>
         </div>
-
+      </div>
       </div>
     </div>
 
     <div class="contenedor">
+      <div id="voladores">
       <div class="row text-center">
 
-        <h2>SERES VOLADORES</h2>
+        <h2 class="caja3">SERES VOLADORES</h2>
 
         <div class="caja3 col-md-3">
           <h2>Dragón</h2>
@@ -209,7 +214,7 @@
             formados, por parte de las águilas tienen una vista y un olfato muy desarrollados y su parte de león les
             lleva a vivir en manadas, dentro de las cuales siempre hay un líder.</p>
         </div>
-
+      </div>
       </div>
     </div>
 
