--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
           <span class="navbar-toggler-icon"></span>
         </button>
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
-          <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+          <ul class="navbar-nav me-auto mb-2 mb-lg-0 col-md-3">
             <li class="nav-item">
               <a class="selected text-decoration-none" aria-current="page" href="#acuaticos">SERES ACUÁTICOS</a>
             </li>
